<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Resume</string>
    <string name="app_github">GitHub</string>
    <string name="app_github_url"><![CDATA[https://github.com/ogaclejapan/SmartTabLayout]]></string>
    <string name="action_settings">Settings</string>

    <string name="demo_title_basic">Basic</string>
    <string name="demo_title_basic2">Basic(Title Offset Auto Center)</string>
    <string name="demo_title_smart_indicator">Smart Indicator</string>
    <string name="demo_title_distribute_evenly">Distribute Evenly</string>
    <string name="demo_title_always_in_center">Always In Center</string>
    <string name="demo_title_custom_tab_text">Custom Tab Text</string>
    <string name="demo_title_custom_tab_margin">Custom Tab Margin (since 1.2~)</string>
    <string name="demo_title_custom_tab_colors">Custom Tab Colors</string>
    <string name="demo_title_custom_tab_icons1">Custom Tab Icons 1</string>
    <string name="demo_title_custom_tab_icons2">Custom Tab Icons 2 (since 1.2~)</string>
    <string name="demo_title_custom_tab_icon_and_text">Custom Tab Icon and Text</string>
    <string name="demo_title_custom_tab_icon_and_notification_mark">Custom Tab Icon and Notification Mark</string>
    <string name="demo_title_indicator_trick1">Indicator Thickness Trick 1</string>
    <string name="demo_title_indicator_trick2">Indicator Thickness Trick 2</string>
    <string name="demo_title_right_to_left">RTL support</string>
    <string name="demo_title_advanced_medium">Advanced: Like a Medium Tag (since 1.2~)</string>

    <string name="demo_tab_1">Cupcake</string>
    <string name="demo_tab_2">Donut</string>
    <string name="demo_tab_3">Eclair</string>
    <string name="demo_tab_4">Froyo</string>
    <string name="demo_tab_5">Gingerbread</string>
    <string name="demo_tab_6">Honeycomb</string>
    <string name="demo_tab_7">Ice Cream Sandwich</string>
    <string name="demo_tab_8">Jelly Bean</string>
    <string name="demo_tab_9">KitKat</string>
    <string name="demo_tab_10">Lollipop</string>

    <string name="demo_tab_no_title">No Title</string>
    <string name="demo_tab_like_a_medium_top">Top</string>
    <string name="demo_tab_like_a_medium_latest">Latest</string>

    <string name="title_activity_intro">IntroActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="create_resume">Create Resume</string>
    <string name="view_resume">View Resume</string>
    <string name="search_resume">Search Resume</string>
    <string name="sign_in">Sign In</string>
    <string name="fetching_profile">Fetching Profile...</string>

    <string name="hint_name">Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_title">Title</string>
    <string name="hint_email">Email</string>
    <string name="hint_timeline">Timeline</string>
    <string name="hint_summary">Summary</string>
    <string name="hint_content">Content</string>
    <string name="hint_content_name">Name</string>
    <string name="hint_content_url">Url</string>
    <string name="hint_page_name">Page Name</string>
    <string name="hint_page_number">Page Number</string>
    <string name="hint_phonenumber">Phone Number</string>
    <string name="hint_address">Address</string>
    <string name="hint_linkname">Name</string>
    <string name="hint_linkurl">URL</string>


    <string name="save">Save</string>
    <string name="upload">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="set_change_photo">Set / Change Photo</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="photo_dialog_title">Photo Picker</string>
    <string name="additional_links">Additional Links</string>



</resources>
