<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:src="@drawable/resume"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="34dp"
        android:textColor="@color/accent"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"
        android:text="@string/app_name"/>


    <mehdi.sakout.fancybuttons.FancyButton xmlns:fancy="http://schemas.android.com/apk/res-auto"
        android:id="@+id/create_view_button"
        fancy:fb_text="@string/create_resume"
        fancy:fb_borderWidth="2dp"
        fancy:fb_borderColor="@color/accent"
        fancy:fb_defaultColor="@color/primary"
        fancy:fb_focusColor="@color/white_20"
        fancy:fb_radius="30dp"
        fancy:fb_textSize="22dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_margin="10dp"
        android:layout_height="75dp"/>

    <mehdi.sakout.fancybuttons.FancyButton xmlns:fancy="http://schemas.android.com/apk/res-auto"
        android:id="@+id/search_button"
        fancy:fb_text="@string/search_resume"
        fancy:fb_borderWidth="2dp"
        fancy:fb_borderColor="@color/accent"
        fancy:fb_defaultColor="@color/primary"
        fancy:fb_focusColor="@color/primary_dark"
        fancy:fb_radius="30dp"
        fancy:fb_textSize="22dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_width="200dp"
        android:layout_height="75dp"/>

</LinearLayout>