<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context="com.gauravbg.myresume.AccountSetupActivity">

    <LinearLayout
        android:id="@+id/pre_login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signIn_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="50dp">

        </com.google.android.gms.common.SignInButton>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="You need to login with a google account"
            android:textColor="@color/accent" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/post_login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <ScrollView
            android:layout_alignParentTop="true"
            android:layout_above="@id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="@dimen/profile_photo_size"
                    android:layout_height="@dimen/profile_photo_size"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="20dp"
                    android:src="@mipmap/ic_account_circle_white_48dp"
                    app:civ_border_color="@color/accent"
                    app:civ_border_width="2dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_image"
                    android:textColorHint="@color/white_20">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/username_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_hint"
                    android:textColorHint="@color/white_20">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/username_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username_hint"
                    android:textColorHint="@color/white_20">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/title_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_title" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_hint"
                    android:textColorHint="@color/white_20">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phonenumber_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email_hint"
                    android:textColorHint="@color/white_20">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/phonenumber_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phonenumber" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/address_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/phonenumber_hint"
                    android:textColorHint="@color/white_20">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/address_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_address" />
                </android.support.design.widget.TextInputLayout>


                <RelativeLayout
                    android:id="@+id/additional_links_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/address_hint"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/additional_links_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:text="@string/additional_links"
                        android:textColor="@color/white"
                        android:textSize="17dp" />

                    <ImageButton
                        android:id="@+id/add_btn"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:background="@mipmap/ic_add_white_48dp" />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_below="@id/additional_links_title"
                        android:layout_marginTop="5dp"
                        android:background="@color/accent"></View>

                    <LinearLayout
                        android:id="@+id/add_links_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/divider"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical"></LinearLayout>

                </RelativeLayout>

            </RelativeLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <mehdi.sakout.fancybuttons.FancyButton xmlns:fancy="http://schemas.android.com/apk/res-auto"
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                fancy:fb_borderColor="@color/accent"
                fancy:fb_borderWidth="2dp"
                fancy:fb_defaultColor="@color/primary"
                fancy:fb_focusColor="@color/primary_dark"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/save"
                fancy:fb_textGravity="center"
                fancy:fb_textSize="17dp" />

            <mehdi.sakout.fancybuttons.FancyButton xmlns:fancy="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                fancy:fb_borderColor="@color/accent"
                fancy:fb_borderWidth="2dp"
                fancy:fb_defaultColor="@color/primary"
                fancy:fb_focusColor="@color/primary_dark"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/cancel"
                fancy:fb_textGravity="center"
                fancy:fb_textSize="17dp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
