<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="10dp">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="3dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="Edit Page"
        android:textColor="@color/accent"
        android:textSize="24dp" />


    <EditText
        android:id="@+id/page_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_page_name"
        android:textColor="@color/accent"
        android:textColorHint="@color/white_20" />


    <EditText
        android:id="@+id/page_number_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/page_name_et"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_page_number"
        android:textColor="@color/accent"
        android:textColorHint="@color/white_20"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_sections_layout"
        android:layout_below="@id/page_number_et"
        android:paddingLeft="4dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/add_section_txt"
            android:textSize="19dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:text="Add Sections" />

        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
            android:id="@+id/number_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            app:backGroundColor="@color/primary"
            app:textSize="12dp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/delete_mark_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_sections_layout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="4dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="Mark for delete"
            android:textSize="19dp" />

        <CheckBox
            android:id="@+id/delete_cb"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/delete_mark_layout"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <mehdi.sakout.fancybuttons.FancyButton xmlns:fancy="http://schemas.android.com/apk/res-auto"
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_weight="1"
            fancy:fb_borderColor="@color/accent"
            fancy:fb_borderWidth="2dp"
            fancy:fb_defaultColor="@color/primary"
            fancy:fb_focusColor="@color/primary_dark"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/save"
            fancy:fb_textGravity="center"
            fancy:fb_textSize="17dp" />

        <mehdi.sakout.fancybuttons.FancyButton xmlns:fancy="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_weight="1"
            fancy:fb_borderColor="@color/accent"
            fancy:fb_borderWidth="2dp"
            fancy:fb_defaultColor="@color/primary"
            fancy:fb_focusColor="@color/primary_dark"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/cancel"
            fancy:fb_textGravity="center"
            fancy:fb_textSize="17dp" />

    </LinearLayout>


</RelativeLayout>