<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="10dp">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="3dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="Edit Page"
        android:textColor="@color/accent"
        android:textSize="24dp" />


    <TextView
        android:id="@+id/pdf_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/hint_page_name"
        android:textColor="@color/accent"
        android:textColorHint="@color/white_20" />

    <LinearLayout
        android:id="@+id/loading_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pdf_name_txt"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <TextView
            android:id="@+id/uploading_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Uploading..." />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/loading_layout"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <mehdi.sakout.fancybuttons.FancyButton xmlns:fancy="http://schemas.android.com/apk/res-auto"
            android:id="@+id/upload_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_weight="1"
            fancy:fb_borderColor="@color/accent"
            fancy:fb_borderWidth="2dp"
            fancy:fb_defaultColor="@color/primary"
            fancy:fb_focusColor="@color/primary_dark"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/upload"
            fancy:fb_textGravity="center"
            fancy:fb_textSize="17dp" />

        <mehdi.sakout.fancybuttons.FancyButton xmlns:fancy="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_weight="1"
            fancy:fb_borderColor="@color/accent"
            fancy:fb_borderWidth="2dp"
            fancy:fb_defaultColor="@color/primary"
            fancy:fb_focusColor="@color/primary_dark"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/cancel"
            fancy:fb_textGravity="center"
            fancy:fb_textSize="17dp" />

    </LinearLayout>


</RelativeLayout>